--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
   "license": "MIT",
   "dependencies": {
     "nanoevents": "^1.0.2"
+  },
+  "scripts": {
+    "lint": "eslint --fix *.js"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
